# defacto

./: .gitignore  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: docs.yml  publish.yml  test.yml
benchmarks/: conftest.py  datagen.py  test_components.py  test_pipeline.py  test_scale.py
crates/defacto-engine/: Cargo.toml
crates/defacto-engine/benches/: core.rs
crates/defacto-engine/src/: error.rs  interpreter.rs  lib.rs  normalizer.rs  store.rs  tick.rs  types.rs
crates/defacto-engine/src/definitions/: entity.rs  mod.rs  schema.rs  source.rs
crates/defacto-engine/src/expression/: evaluator.rs  functions.rs  mod.rs  parser.rs
crates/defacto-python/: Cargo.toml
crates/defacto-python/src/: convert.rs  lib.rs
defacto/: __init__.py
defacto.egg-info/: PKG-INFO  SOURCES.txt
docs/: docusaurus.config.ts  package-lock.json  sidebars.ts
docs/docs/: index.md
docs/docs/get-started/: glossary.md  how-it-works.md  quickstart.md
docs/docs/guides/: definitions.md  deployment.md  lifecycle.md  queries.md
docs/docs/reference/: api.md  configuration.md  definition-schema.md  expressions.md
docs/src/css/: custom.css
examples/quickstart/: main.py
examples/quickstart/entities/: customer.yaml
examples/quickstart/sources/: app.yaml
examples/showcase/: main.py
examples/showcase/entities/: customer.yaml  order.yaml
examples/showcase/sources/: app.yaml  billing.yaml
protocol/: DefactoProtocol.cfg  DefactoProtocol.tla
python/defacto/: __init__.py  _build.py  _core.pyi  _ddl.py  _dead_letter.py  _defacto.py  _identity.py  _logging.py  _pipeline.py  _publisher.py  errors.py  results.py
python/defacto/backends/: __init__.py  _definition_store.py  _identity.py  _ledger.py  _state_history.py
python/defacto/definitions/: __init__.py  _types.py
python/defacto/query/: __init__.py  _collection.py  _graph.py  _query.py  _table.py
tests/: conftest.py
tests/correctness/: conftest.py  datagen.py  test_build_state_contract.py  test_identity_contract.py  test_invariants.py  test_ledger_contract.py  test_lifecycle_contract.py  test_query_contract.py  test_state_history_contract.py
tests/integration/: conftest.py  test_graph_neo4j.py  test_kafka.py  test_postgres_backends.py  test_production_e2e.py  test_tiered_ledger.py
tests/unit/: test_backends.py  test_build.py  test_ddl.py  test_defacto.py  test_definitions.py  test_definitions_db.py  test_definitions_manager.py  test_errors.py  test_graph_networkx.py  test_identity_resolver.py  test_imports.py  test_integration.py  test_internals.py  test_pipeline.py  test_publisher.py  test_query.py  test_results.py  test_sharding.py  test_smoke.py  test_stubs.py
