[package]
name = "defacto-engine"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["rlib"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
thiserror = "2"
dashmap = "6"
rayon = "1"
chumsky = { version = "0.10", features = ["pratt"] }
regex = "1"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "core"
harness = false
