[package]
name = "defacto-python"
version = "0.1.0"
edition = "2021"

[lib]
name = "_core"
crate-type = ["cdylib"]

[dependencies]
defacto-engine = { path = "../defacto-engine" }
pyo3 = { version = "0.23", features = ["extension-module"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
rayon = "1"
